# LibBSC-for-.NET

./: .gitignore  README.md
AL Libbsc Compression/: BSCDataCompression.Codeunit.al  LibbscSharpTester.Page.al  Maxime Caty_Libbsc Compression App_1.0.0.0.app  app.json
Libbsc Compression/: BSCDataCompression.Codeunit.al  Default Publisher_Libbscshart test_1.0.0.0.app  DotNet.al  LibbscSharpSetup.Table.al  Maxime Caty_Libbsc Compression App_1.0.0.0.app
LibbscSharp Visual Studio 17/: LibbscSharp.sln
LibbscSharp Visual Studio 17/LibbscSharp .Net Framework 4.8/: LibbscSharp .Net Framework 4.8.csproj  LibbscSharp.cs
LibbscSharp Visual Studio 17/LibbscSharp AZ Function/: Function.cs  Function1.cs  LibbscSharp AZ Function.csproj  LibbscSharp AZ Function.csproj.Backup.tmp  Program.cs
LibbscSharp Visual Studio 17/bscwrapperCLR/: CMakeLists.txt  bscwrapperCLR.vcxproj  bscwrapperCLR.vcxproj.filters
LibbscSharp Visual Studio 17/bscwrapperCLR/Release/: bscwrapperCLR.vcxproj.AssemblyReference.cache
LibbscSharp Visual Studio 17/bscwrapperCLR/Release/LibBSC C.9d53fd23.tlog/: LibBSC CLR Port .Net Framework.lastbuildstate
LibbscSharp Visual Studio 17/bscwrapperCLR/x64/Release/: bscwrapperCLR.dll.recipe  bscwrapperCLR.vcxproj.FileListAbsolute.txt
LibbscSharp Visual Studio 17/bscwrapperCLR/x64/Release/LibBSC C.9d53fd23.tlog/: Cl.items.tlog  LibBSC CLR Port .Net Framework.lastbuildstate  link.read.1.tlog  link.secondary.1.tlog
LibbscSharp Visual Studio 17/bscwrapperCLR/x64/Release/bscwrapperCLR.tlog/: CL.write.1.tlog  bscwrapperCLR.lastbuildstate  link.secondary.1.tlog
(+131 files in other folders)
